2005-07-13  Per Bothner  <per@bothner.com>

	* IntFraction.java (toString(int)): Pass radix to toString for
	denominator as well as numerator.

2005-04-03  Per Bothner  <per@bothner.com>

	* IntNum.java: Fix two javadoc problems.

2005-01-19  Dominique Boucher <dominique.boucher@nuecho.com>
	    Per Bothner  <per@bothner.com>

	* ExponentialFormat.java (addOne): Fix fencepost error - test for
	reaching the start of the substring *before* decrementing.

2005-01-02  Per Bothner  <per@bothner.com>

	* RealNum.java:	Change "select" (preprocessor) syntax.

2004-07-20  Per Bothner  <per@bothner.com>

	* Unit.java:  Remove unused import statements.

2004-02-21  Per Bothner  <per@bothner.com>

	* RealNum.java:  Implement Comparable, if JAVA2.
	(compareTo):  New methods, calls older compare method.
	* DFloNum.java (compare):  Remove extra instanceof tests,
	giving us correct exceptions required by Comparable interface.
	(compareReversed):  Likewise.
	* IntFraction.java (compare, compareReversed):  Likewise.
	* IntNum.java (compare):  Likewise.

2003-08-20  Per Bothner  <per@bothner.com>

	* Complex.java:  Make more consistengt with IntNum.
	(mul):  Rename static 2-operand method to times.
	(div):  Rename static 2-operand method to divide.
	* DComplex.java:  Likewise.
	* DQuantity.java:  Likewise.
	* MulUnit.java:  Likewise.
	* Quantity.java:  Likewise.
	* RealNum.java:  Likewise.
	* Unit.java:  Likewise.

	* IntNum.java (remainder, modulo):  Return x if y is zero.

2003-08-14  Per Bothner  <per@bothner.com>

	* IntNum.java (sign):  If high-order word is zero, we need to
	check that remaining words are zero.  Reported by Aubrey Jaffer.

	* IntNum.java (valueOf):  Cheap and more general fits-in-long test.

2002-03-02  Per Bothner  <per@bothner.com>

	* IntNum.java (compare(IntNum,int)):  New static method.

2001-12-24  Per Bothner  <per@bothner.com>

	* package.html:  Remove "http:" from relative URLs.

2001-08-16  Per Bothner  <per@bothner.com>
